1.17.1 - 0.0.20: Clean up deprecated methods.